# xivc

./: Cargo.toml  LICENSE-MIT  out.txt  todo.txt
crates/macros/: Cargo.toml
crates/macros/src/: csv.rs  lib.rs  vc.rs
crates/xivc-core/: Cargo.toml
crates/xivc-core/sheets/: data_job.csv  data_level.csv  data_level.csv.full
crates/xivc-core/src/: enums.rs  job.rs  lib.rs  timing.rs  util.rs
crates/xivc-core/src/job/: brd.rs  dnc.rs  mod.rs  role.rs  rpr.rs  sam.rs
crates/xivc-core/src/jobs/: mod.rs  rpr.rs  sam.rs
crates/xivc-core/src/math/: data.rs  mod.rs
crates/xivc-core/src/world/: mod.rs  queue.rs  status.rs
crates/xivc-core/src/world/queue/: mod.rs  radix.rs
crates/xivc-tl-sim/: Cargo.toml
crates/xivc-tl-sim/src/: lib.rs
csv-macro/: Cargo.toml
csv-macro/src/: lib.rs
src/: arena.rs  enums.rs  gnbsim.rs  lib.rs  macros.rs
src/job/: drg.rs  gnb.rs  mod.rs
src/math/: data.rs  data_clan.csv  data_job.csv  data_level.csv  mod.rs
src/sim/: cooldown.rs  event.rs  eventqueue.rs  mod.rs
xivc-macros/: Cargo.toml
xivc-macros/src/: lib.rs
