[package]
name = "xivc"
version = "0.1.0"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xivc-macros = { path = "./xivc-macros" }
radix-heap = "0.3.8"

[lib]

[[bin]]
name = "gnbsim"
path = "./src/gnbsim.rs"