[package]
name = "xivc-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
include = ["./sheets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
macros.workspace = true
serde = { workspace = true, features = [ "derive" ], optional = true }
