[package]
name = "xivc-tl-sim"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
xivc-core.workspace = true
serde = { workspace = true, features = [ "derive" ], optional = true }